--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cyber Game POC</title>
+    <title>Cylander</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="game-container"></div>
-    <script type="module" src="scripts/game.js"></script>
+    <script type="module" src="js/game.js"></script>
 </body>
 </html>
 
