--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="game-container"></div>
-    <script type="module" src="js/game.js"></script>
+    <script type="module" src="src/js/game.js"></script>
 </body>
 </html>
 
